<resources>
    <string name="app_name">QS-Relay</string>
    <string name="refresh">Refresh</string>
    <string name="relay_1">Relay 1</string>
    <string name="relay_2">Relay 2</string>
    <string name="relay_3">Relay 3</string>
    <string name="relay_4">Relay 4</string>
    <string name="relay_5">Relay 5</string>
    <string name="relay_6">Relay 6</string>
    <string name="relay_7">Relay 7</string>
    <string name="relay_8">Relay 8</string>
    <string name="save_state">Save state</string>
    <string name="save_config">Save config</string>
    <string name="config">Configuration</string>
    <string name="config_deviceName">Device name</string>
    <string name="config_minTries">Min connection tries</string>
    <string name="config_maxTries">Max connection tries</string>
    <string name="config_msTimeBetweenEachTry">Milliseconds between tries</string>
    <string name="config_relay1">Relay 1 name</string>
    <string name="config_relay2">Relay 2 name</string>
    <string name="config_relay3">Relay 3 name</string>
    <string name="config_relay4">Relay 4 name</string>
    <string name="config_relay5">Relay 5 name</string>
    <string name="config_relay6">Relay 6 name</string>
    <string name="config_relay7">Relay 7 name</string>
    <string name="config_relay8">Relay 8 name</string>
    <string name="log">Log</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="clear_logs">Clear logs</string>
    <string name="service_is_running">Service is running?</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="stopped_service">Stopped service</string>
    <string name="started_service">Started service</string>
</resources>
