<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="start"/>
                <TextView
                    android:id="@+id/text_stopped_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:textColor="@color/stoppedService"
                    android:text="@string/stopped_service"/>
                <TextView
                    android:id="@+id/text_started_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:visibility="gone"
                    android:textColor="@color/startedService"
                    android:text="@string/started_service"/>

        </LinearLayout>
        <Button
            android:id="@+id/turn_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:text="@string/turn_on" />
        <Button
            android:id="@+id/turn_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:text="@string/turn_off"
            android:visibility="gone"/>

</LinearLayout>