<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90sp"
        app:layout_constraintBottom_toTopOf="@id/save_state"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/switch_relay_1"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_1"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_relay_2"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_2"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/switch_relay_1"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_relay_3"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_3"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_1" />

            <Switch
                android:id="@+id/switch_relay_4"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_4"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/switch_relay_3"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_2" />

            <Switch
                android:id="@+id/switch_relay_5"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_5"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_3" />

            <Switch
                android:id="@+id/switch_relay_6"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_6"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/switch_relay_5"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_4" />

            <Switch
                android:id="@+id/switch_relay_7"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_7"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_5" />

            <Switch
                android:id="@+id/switch_relay_8"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:switchPadding="5dp"
                android:text="@string/relay_8"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/switch_relay_7"
                app:layout_constraintTop_toBottomOf="@+id/switch_relay_6" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/save_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <view
        android:id="@+id/loadingLayout"
        class="android.support.constraint.ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/modal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </view>

</android.support.constraint.ConstraintLayout>