<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        app:layout_constraintBottom_toTopOf="@+id/save_config"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:paddingTop="90sp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_deviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/config_deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_deviceName"
                    android:inputType="text"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_minTries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_deviceName">

                <EditText
                    android:id="@+id/config_minTries"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_minTries"
                    android:inputType="numberSigned"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_maxTries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_minTries">

                <EditText
                    android:id="@+id/config_maxTries"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_maxTries"
                    android:inputType="numberSigned"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_msTimeBetweenEachTry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_maxTries">

                <EditText
                    android:id="@+id/config_msTimeBetweenEachTry"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_msTimeBetweenEachTry"
                    android:inputType="numberSigned"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_msTimeBetweenEachTry"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay1"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay1"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay1"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay2"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay2"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay2"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay3"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay3"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay3"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay4"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay4"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay4"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay5"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay5"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay5"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay6"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay6"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay6"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay7"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay7"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/config_input_relay8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/config_input_relay7"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/config_relay8"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/config_relay8"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/save_config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>