<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/service_is_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_is_running"
        android:switchPadding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="false"
        android:focusable="false"/>

    <ListView
        android:id="@+id/log_lines"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/refresh_logs"
        app:layout_constraintTop_toBottomOf="@+id/service_is_running"></ListView>

    <Button
        android:id="@+id/refresh_logs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorSecondary"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/start_service"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clear_logs" />

    <Button
        android:id="@+id/clear_logs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorSecondary"
        android:text="@string/clear_logs"
        app:layout_constraintBottom_toTopOf="@+id/stop_service"
        app:layout_constraintLeft_toRightOf="@+id/refresh_logs"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorSecondary"
        android:text="@string/start_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stop_service" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorSecondary"
        android:text="@string/stop_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/start_service"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>